cabal-version: 2.4
name:          gutentag-world
version:       0.1.0.0
description:   Gutentag, World!
license:       MIT

library
    exposed-modules: GutentagWorld
    hs-source-dirs:  src
    default-language: Haskell2010

executable gutentag-world
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base, gutentag-world
    default-language: Haskell2010
